# Nigel-Wormclams-Rusty-Adventures

./: .gitignore  Cargo.toml
assets/: inventoryIcon.xcf  invslot.xcf  skillsIcon.xcf  tileset.xcf
assets/maps/: basictiles.tsx  overworld.tmx
src/: assets.rs  input.rs  inventory.rs  inventory_ui.rs  item.rs  main.rs  math.rs  model.rs  msg.rs  player.rs  view.rs
